--- a/Intranet/pom.xml
+++ b/Intranet/pom.xml
@@ -8,11 +8,12 @@
 		<version>2.3.0.RELEASE</version>
 		<relativePath/>
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.hcl.intranet</groupId>
 	<artifactId>Intranet</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>Intranet</name>
-	<description>Demo project for Spring Boot</description>
+	<description>HCL Intranet project</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -48,6 +49,10 @@
 		  <groupId>org.springframework.boot</groupId>
 		  <artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+      	<dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      	</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
